--- a/package.json
+++ b/package.json
@@ -26,10 +26,7 @@
   "scripts": {
     "prebuild": "rimraf lib",
     "build": "tsc",
-    "pretest": "npm run build",
-    "update": "npm update && npm update --save-dev",
-    "check": "npm outdated && npm outdated --save-dev",
-    "release": "npm run build && np --no-cleanup --yolo --no-publish --any-branch",
+    "pretest": "pnpm run build",
     "ci:publish": "pnpm run build && pnpx changeset publish",
     "ci:version": "pnpx changeset version",
     "ci:snapshot": "pnpx changeset version --snapshot beta",
