--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "email": "jiangweixian1994@gmail.com",
     "url": "https://twitter.com/jiangweixian"
   },
-  "main": ".lib/bin-template.cjs.js",
-  "module": ".lib/bin-template.esm.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "bin": {
-    "bin-template": "lib/bin-template.js"
+    "bin-template": "dist/cli.js"
   },
   "scripts": {
     "prebuild": "rimraf lib",
     "build": "tsc",
     "pretest": "pnpm run build",
+    "test": "jest",
     "ci:publish": "pnpm run build && pnpx changeset publish",
     "ci:version": "pnpx changeset version",
     "ci:snapshot": "pnpx changeset version --snapshot beta",
@@ -42,7 +43,8 @@
     "chalk": "4.1.1",
     "commander": "8.0.0",
     "inquirer": "8.1.2",
-    "ora": "5.4.1"
+    "ora": "5.4.1",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@aiou/eslint-config": "0.2.1",
@@ -50,16 +52,20 @@
     "@types/download": "8.0.1",
     "@types/fs-extra": "9.0.12",
     "@types/inquirer": "7.3.3",
+    "@types/jest": "^27.0.2",
     "@types/node": "16.3.3",
     "@types/rimraf": "3.0.1",
     "cz-emoji": "^1.3.1",
     "eslint": "^7.30.0",
+    "execa": "^5.1.1",
     "husky": "^7.0.0",
+    "jest": "^27.3.1",
     "lint-staged": "^11.0.1",
     "np": "7.5.0",
     "prettier": "2.3.2",
     "pretty-quick": "3.1.1",
     "rimraf": "3.0.2",
+    "ts-jest": "^27.0.7",
     "typescript": "4.3.5"
   },
   "config": {
