--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "scripts": {
     "build": "rimraf lib && rollup -c --silent --environment BUILD:production",
     "dev": "rollup -c --silent -w",
-    "jest": "NO_COLOR=1 node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test": "pnpm run build && pnpm run jest",
+    "vitest": "vitest",
+    "test": "pnpm run build && pnpm run vitest",
     "ci:publish": "pnpm run build && pnpm changeset publish",
     "ci:version": "pnpm changeset version",
     "ci:snapshot": "pnpm changeset version --snapshot beta",
@@ -47,7 +47,6 @@
       "eslint --fix"
     ]
   },
-  "dependencies": {},
   "devDependencies": {
     "@aiou/eslint-config": "^0.3.2",
     "@changesets/cli": "^2.19.0",
@@ -57,7 +56,6 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/download": "^8.0.1",
     "@types/inquirer": "^8.1.3",
-    "@types/jest": "^27.4.0",
     "@types/node": "17.0.8",
     "@types/rimraf": "^3.0.2",
     "commander": "8.3.0",
@@ -68,7 +66,6 @@
     "execa": "^6.0.0",
     "husky": "^7.0.4",
     "inquirer": "8.2.0",
-    "jest": "^27.4.7",
     "lint-staged": "^12.1.5",
     "ora": "6.0.1",
     "picocolors": "1.0.0",
@@ -78,8 +75,8 @@
     "rollup": "^2.63.0",
     "rollup-plugin-esbuild": "^4.8.2",
     "rollup-plugin-size": "^0.2.2",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "vitest": "^0.22.1"
   },
   "config": {
     "commitizen": {
