--- a/package.json
+++ b/package.json
@@ -70,10 +70,10 @@
     "ora": "6.0.1",
     "picocolors": "1.0.0",
     "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.63.0",
     "rollup-plugin-esbuild": "^4.8.2",
+    "rollup-plugin-node-externals": "^4.1.1",
     "rollup-plugin-size": "^0.2.2",
     "typescript": "^4.5.4",
     "vitest": "^0.22.1"
