--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@types/inquirer": "^8.1.3",
     "@types/node": "17.0.8",
     "@types/rimraf": "^3.0.2",
-    "commander": "8.3.0",
+    "cac": "6.7.12",
     "consola": "^2.15.3",
     "cz-emoji": "^1.3.1",
     "esbuild": "^0.14.10",
