--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@aiou/bin-template",
   "version": "3.0.1",
+  "type": "module",
   "description": "templates for cli project",
-  "keywords": [
-    "aiou",
-    "cli",
-    "neo",
-    "template"
-  ],
+  "keywords": ["aiou", "cli", "neo", "template"],
   "license": "MIT",
+  "engines": {
+    "node": ">=12.20.0"
+  },
   "homepage": "https://github.com/neo-hack/bin-template#readme",
   "repository": {
     "type": "git",
@@ -23,12 +22,8 @@
     "email": "jiangweixian1994@gmail.com",
     "url": "https://twitter.com/jiangweixian"
   },
-  "type": "module",
   "bin": {
     "bin-template": "bin/index.mjs"
-  },
-  "engines": {
-    "node": ">=12.20.0"
   },
   "scripts": {
     "build": "rimraf lib && rollup -c --silent --environment BUILD:production",
@@ -43,13 +38,11 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "**/**/*.{js,ts,tsx,vue,json}": [
-      "eslint --fix"
-    ]
+    "**/**/*.{js,ts,tsx,vue,json,yml,yaml}": ["eslint --fix"]
   },
   "devDependencies": {
-    "@aiou/eslint-config": "^0.3.2",
-    "@changesets/cli": "^2.19.0",
+    "@aiou/eslint-config": "^0.10.0",
+    "@changesets/cli": "^2.26.0",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
@@ -62,11 +55,11 @@
     "consola": "^2.15.3",
     "cz-emoji": "^1.3.1",
     "esbuild": "^0.14.10",
-    "eslint": "7.x",
+    "eslint": "^8.32.0",
     "execa": "^6.0.0",
-    "husky": "^7.0.4",
+    "husky": "^8.0.3",
     "inquirer": "8.2.0",
-    "lint-staged": "^12.1.5",
+    "lint-staged": "^13.1.0",
     "ora": "6.0.1",
     "picocolors": "1.0.0",
     "prettier": "^2.5.1",
@@ -75,12 +68,7 @@
     "rollup-plugin-esbuild": "^4.8.2",
     "rollup-plugin-node-externals": "^4.1.1",
     "rollup-plugin-size": "^0.2.2",
-    "typescript": "^4.5.4",
+    "typescript": "^4.6.4",
     "vitest": "^0.22.1"
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-emoji"
-    }
   }
 }
