--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "build": "rimraf lib && rollup -c --silent --environment BUILD:production",
-    "dev": "rollup -c --silent -w",
+    "dev": "rollup -c -w",
     "vitest": "vitest",
     "test": "pnpm run build && pnpm run vitest",
     "ci:publish": "pnpm run build && pnpm changeset publish",
@@ -52,6 +52,7 @@
     "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/inquirer": "^8.1.3",
     "@types/node": "17.0.8",
     "@types/rimraf": "^3.0.2",
@@ -72,6 +73,7 @@
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-node-externals": "^6.1.1",
     "rollup-plugin-size": "^0.3.1",
+    "source-map-support": "^0.5.21",
     "typescript": "^4.6.4",
     "vitest": "^0.22.1"
   }
