--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@aiou/bin-template",
   "version": "3.1.0",
   "type": "module",
+  "packageManager": "pnpm@7.33.0",
   "description": "templates for cli project",
   "keywords": [
     "aiou",
