--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@aiou/bin-template",
   "version": "3.1.0",
   "type": "module",
+  "packageManager": "pnpm@7.33.0",
   "description": "templates for cli project",
   "keywords": [
     "aiou",
@@ -11,7 +12,7 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": ">=12.20.0"
+    "node": ">=16"
   },
   "homepage": "https://github.com/neo-hack/bin-template#readme",
   "repository": {
@@ -32,7 +33,7 @@
   },
   "scripts": {
     "build": "rimraf lib && rollup -c --silent --environment BUILD:production",
-    "dev": "rollup -c --silent -w",
+    "dev": "rollup -c -w",
     "vitest": "vitest",
     "test": "pnpm run build && pnpm run vitest",
     "ci:publish": "pnpm run build && pnpm changeset publish",
@@ -46,20 +47,20 @@
     "**/**/*.{js,ts,tsx,vue,json,yml,yaml}": ["eslint --fix"]
   },
   "devDependencies": {
-    "@aiou/eslint-config": "^0.10.0",
+    "@aiou/eslint-config": "^0.11.0",
     "@changesets/cli": "^2.26.0",
-    "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/download": "^8.0.1",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/inquirer": "^8.1.3",
     "@types/node": "17.0.8",
     "@types/rimraf": "^3.0.2",
-    "commander": "8.3.0",
+    "cac": "6.7.12",
     "consola": "^2.15.3",
     "cz-emoji": "^1.3.1",
-    "esbuild": "^0.14.10",
+    "esbuild": "^0.18.6",
     "eslint": "^8.32.0",
     "execa": "^6.0.0",
     "husky": "^8.0.3",
@@ -69,10 +70,11 @@
     "picocolors": "1.0.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.63.0",
-    "rollup-plugin-esbuild": "^4.8.2",
-    "rollup-plugin-node-externals": "^4.1.1",
-    "rollup-plugin-size": "^0.2.2",
+    "rollup": "^3.25.1",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-node-externals": "^6.1.1",
+    "rollup-plugin-size": "^0.3.1",
+    "source-map-support": "^0.5.21",
     "typescript": "^4.6.4",
     "vitest": "^0.22.1"
   }
